[gd_scene load_steps=30 format=3 uid="uid://dga7wbow6g13l"]

[ext_resource type="Script" path="res://scripts/player.gd" id="1_si1ba"]
[ext_resource type="Texture2D" uid="uid://codt0jaflak33" path="res://assets/characters/little girl/little_girl.png" id="2_iim8w"]
[ext_resource type="PackedScene" uid="uid://b4ujejr1mllwk" path="res://scenes/Battle/HealthBar.tscn" id="3_a3jk3"]
[ext_resource type="PackedScene" uid="uid://drleshth75j8h" path="res://scenes/utils/player_mana.tscn" id="4_mugsa"]
[ext_resource type="FontFile" uid="uid://bvejq551x3nnp" path="res://assets/AmiNo8bitFont.ttf" id="5_cv0ug"]
[ext_resource type="PackedScene" uid="uid://c6pbaaxq8k1jr" path="res://scenes/Inventory/alchemy_menu.tscn" id="6_ol5bh"]
[ext_resource type="PackedScene" uid="uid://50rdw1dt63h6" path="res://scenes/Inventory/inventory_ui.tscn" id="7_by8ww"]
[ext_resource type="PackedScene" uid="uid://c1ebrg8kocewe" path="res://scenes/Summons/summon_team.tscn" id="8_3drfb"]
[ext_resource type="PackedScene" uid="uid://fb656fvmu33t" path="res://scenes/Summons/summoning_circle_ui.tscn" id="9_lspmx"]
[ext_resource type="Texture2D" uid="uid://ck2eonr1vwdkg" path="res://assets/Textures/light_radial.png" id="10_feya0"]

[sub_resource type="AtlasTexture" id="AtlasTexture_8aur7"]
atlas = ExtResource("2_iim8w")
region = Rect2(248, 124, 62, 62)

[sub_resource type="AtlasTexture" id="AtlasTexture_4n7d1"]
atlas = ExtResource("2_iim8w")
region = Rect2(0, 186, 62, 62)

[sub_resource type="AtlasTexture" id="AtlasTexture_23if1"]
atlas = ExtResource("2_iim8w")
region = Rect2(62, 186, 62, 62)

[sub_resource type="AtlasTexture" id="AtlasTexture_i6sv0"]
atlas = ExtResource("2_iim8w")
region = Rect2(124, 186, 62, 62)

[sub_resource type="AtlasTexture" id="AtlasTexture_vc1wd"]
atlas = ExtResource("2_iim8w")
region = Rect2(62, 0, 62, 62)

[sub_resource type="AtlasTexture" id="AtlasTexture_688a1"]
atlas = ExtResource("2_iim8w")
region = Rect2(124, 0, 62, 62)

[sub_resource type="AtlasTexture" id="AtlasTexture_8md6x"]
atlas = ExtResource("2_iim8w")
region = Rect2(186, 0, 62, 62)

[sub_resource type="AtlasTexture" id="AtlasTexture_a5yil"]
atlas = ExtResource("2_iim8w")
region = Rect2(248, 0, 62, 62)

[sub_resource type="AtlasTexture" id="AtlasTexture_p0up1"]
atlas = ExtResource("2_iim8w")
region = Rect2(0, 62, 62, 62)

[sub_resource type="AtlasTexture" id="AtlasTexture_q75ae"]
atlas = ExtResource("2_iim8w")
region = Rect2(62, 62, 62, 62)

[sub_resource type="AtlasTexture" id="AtlasTexture_yv5qf"]
atlas = ExtResource("2_iim8w")
region = Rect2(124, 62, 62, 62)

[sub_resource type="AtlasTexture" id="AtlasTexture_ecebh"]
atlas = ExtResource("2_iim8w")
region = Rect2(62, 124, 62, 62)

[sub_resource type="AtlasTexture" id="AtlasTexture_wprn5"]
atlas = ExtResource("2_iim8w")
region = Rect2(124, 124, 62, 62)

[sub_resource type="AtlasTexture" id="AtlasTexture_x3hxn"]
atlas = ExtResource("2_iim8w")
region = Rect2(186, 124, 62, 62)

[sub_resource type="SpriteFrames" id="SpriteFrames_70ewb"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8aur7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4n7d1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_23if1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i6sv0")
}],
"loop": true,
"name": &"die",
"speed": 7.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_vc1wd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_688a1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8md6x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a5yil")
}],
"loop": true,
"name": &"walk_down",
"speed": 7.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_p0up1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q75ae")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yv5qf")
}],
"loop": true,
"name": &"walk_right",
"speed": 7.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ecebh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wprn5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x3hxn")
}],
"loop": true,
"name": &"walk_up",
"speed": 7.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_g0l5v"]
height = 42.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_lrvrn"]
size = Vector2(20, 26)

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_2drd4"]
light_mode = 2

[sub_resource type="OccluderPolygon2D" id="OccluderPolygon2D_jjbkd"]
closed = false
polygon = PackedVector2Array(0, -10, 0, 28, 0, 0, -6, -1, 7, -1)

[node name="player" type="CharacterBody2D" groups=["player"]]
process_mode = 3
z_index = 1
collision_mask = 6
script = ExtResource("1_si1ba")

[node name="Sprite" type="AnimatedSprite2D" parent="."]
unique_name_in_owner = true
light_mask = 2
visibility_layer = 2
sprite_frames = SubResource("SpriteFrames_70ewb")
animation = &"die"
frame_progress = 0.216375

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(0, 3)
zoom = Vector2(0.6, 0.6)
process_callback = 0
limit_smoothed = true

[node name="FadeMask" type="ColorRect" parent="Camera2D"]
modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(2000, 2000)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -1000.0
offset_top = -1000.0
offset_right = 1000.0
offset_bottom = 1000.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0, 0, 0, 1)

[node name="CanvasLayer" type="CanvasLayer" parent="Camera2D"]

[node name="HealthBar" parent="Camera2D/CanvasLayer" instance=ExtResource("3_a3jk3")]
unique_name_in_owner = true

[node name="PlayerMana" parent="Camera2D/CanvasLayer" instance=ExtResource("4_mugsa")]
offset_top = 39.0
offset_right = -332.0
offset_bottom = -227.0

[node name="ItemsLabel" type="Label" parent="Camera2D/CanvasLayer"]
visible = false
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -40.0
offset_bottom = 23.0
grow_horizontal = 0
theme_override_fonts/font = ExtResource("5_cv0ug")
theme_override_font_sizes/font_size = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 8)
shape = SubResource("CapsuleShape2D_g0l5v")

[node name="Marker2D" type="Marker2D" parent="."]
position = Vector2(0, 29)
rotation = 1.5708

[node name="Area2D" type="Area2D" parent="Marker2D"]
position = Vector2(10, -4.37114e-07)
collision_layer = 0
collision_mask = 32

[node name="CollisionShape2D" type="CollisionShape2D" parent="Marker2D/Area2D"]
shape = SubResource("RectangleShape2D_lrvrn")

[node name="HitDelay" type="Timer" parent="."]

[node name="Blinking" type="Timer" parent="."]
wait_time = 0.1

[node name="InventoryUI" type="CanvasLayer" parent="."]
visible = false

[node name="AlchemyMenu" parent="InventoryUI" instance=ExtResource("6_ol5bh")]
anchors_preset = 2
anchor_top = 1.0
anchor_right = 0.0
offset_left = 90.0
offset_top = -70.0
offset_right = 90.0
offset_bottom = -70.0
grow_horizontal = 1
grow_vertical = 0

[node name="InventoryUI" parent="InventoryUI" instance=ExtResource("7_by8ww")]
anchors_preset = 1
anchor_top = 0.0
anchor_bottom = 0.0
offset_left = -100.0
offset_top = 200.0
offset_right = -100.0
offset_bottom = 200.0
grow_vertical = 1

[node name="SummonTeam" parent="InventoryUI" instance=ExtResource("8_3drfb")]
offset_left = 285.0
offset_right = -195.0

[node name="SummoningCircleUI" parent="InventoryUI" instance=ExtResource("9_lspmx")]
visible = false
offset_left = 108.0
offset_top = 161.0
offset_right = 108.0
offset_bottom = 161.0

[node name="PlayerToughts" type="CanvasLayer" parent="."]

[node name="PlayerToughtContainer" type="CenterContainer" parent="PlayerToughts"]
unique_name_in_owner = true
modulate = Color(1, 1, 1, 0)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -89.0
offset_top = -56.0
offset_right = 90.0
offset_bottom = -16.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(0, 30)

[node name="PanelContainer" type="PanelContainer" parent="PlayerToughts/PlayerToughtContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="PlayerToughts/PlayerToughtContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 3
theme_override_constants/margin_top = 3
theme_override_constants/margin_right = 3
theme_override_constants/margin_bottom = 3

[node name="PlayerToughtLabel" type="Label" parent="PlayerToughts/PlayerToughtContainer/PanelContainer/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
text = " This is gona be useful."
visible_characters = 0
visible_characters_behavior = 1
visible_ratio = 0.0

[node name="LightOccluder2D" type="LightOccluder2D" parent="."]
material = SubResource("CanvasItemMaterial_2drd4")
occluder = SubResource("OccluderPolygon2D_jjbkd")

[node name="PointLight2D" type="PointLight2D" parent="."]
position = Vector2(0, 28)
range_item_cull_mask = 3
texture = ExtResource("10_feya0")
texture_scale = 0.75

[connection signal="area_entered" from="Marker2D/Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="area_exited" from="Marker2D/Area2D" to="." method="_on_area_2d_area_exited"]
[connection signal="timeout" from="HitDelay" to="." method="_on_hit_delay_timeout"]
[connection signal="timeout" from="Blinking" to="." method="_on_blinking_timeout"]
